--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
