--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
