--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "isEqual": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
