--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.14",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
+    "@mui/styles": "^6.0.2",
+    "@mui/x-date-pickers": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "install": "^0.13.0",
     "isEqual": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "npm": "^10.8.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.4",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
