--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.0.2",
+    "@mui/material": "^6.1.0",
     "@mui/styles": "^6.0.2",
     "@mui/x-date-pickers": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
@@ -34,6 +35,7 @@
     "npm": "^10.8.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.13.4",
+    "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
@@ -41,6 +43,7 @@
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "react-yandex-maps": "^4.6.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.0.7",
     "zustand": "^4.5.5"
